--- a/.github/workflows/doit.yml
+++ b/.github/workflows/doit.yml
@@ -37,4 +37,5 @@ jobs:
       - run: poetry install --no-interaction --no-root
         if: steps.cache-deps.outputs.cache-hit != 'true'
       - run: poetry install --no-interaction
-      - run: poetry run doit
+      - run: poetry run doit lint
+      - run: poetry run doit test
